# CellCheck

./: .gitignore  BRAND_GUIDELINES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  cellcheck.spec  pyproject.toml
assets/branding/: README.md
docs/: CLEAN_MACHINE_VALIDATION.md  LICENSE_SETUP.md  OPEN_SOURCE_STRATEGY.md  PACKAGING_LOCAL.md  RELEASE_CANDIDATE_CHECKLIST.md  architecture.md  ccal_format.md  roadmap.md
examples/esercizio_excel_base/: README.md  feedback_studente_esempio.txt  modello_risolto.xlsx  modello_vuoto.xlsx  profilo_correzione.ccal  report_docente_esempio.txt  studente_corretto.xlsx  studente_errori.xlsx  tabella_valutazione_esempio.txt
manual_tests/: README.md
packaging/: pyinstaller_entry.py
src/cellcheck/: __init__.py  app.py
src/cellcheck/core/: README.md  __init__.py  color_scanner.py  color_utils.py  correction_engine.py  errors.py  profile_importer.py  scoring.py  workbook_reader.py
src/cellcheck/models/: README.md  __init__.py  color_scan.py  enums.py  importer.py  profile.py  report.py  rule.py  tolerance.py  workbook.py
src/cellcheck/reporting/: __init__.py  text_report_exporter.py
src/cellcheck/storage/: README.md  __init__.py  ccal_store.py  errors.py
src/cellcheck/ui/: README.md  __init__.py  app_state.py  branding.py  color_picker.py  evaluation_table.py  i18n.py  (+12 more)
tests/: __init__.py  test_ccal_store.py  test_color_picker.py  test_color_scanner.py  test_correction_engine.py  test_evaluation_table.py  test_examples.py  test_gui_imports.py  test_i18n.py  test_models.py  test_multi_report_state.py  test_package_import.py  test_packaging_readiness.py  test_profile_editor_helpers.py  test_profile_importer.py  test_profile_workbook_metadata.py  test_project_navigator.py  test_report_manual_override.py  test_report_viewer_imports.py  test_required_activity.py  test_scoring.py  test_text_report_exporter.py  test_workbook_preview.py  test_workbook_reader.py  test_workspace_reset.py
tools/: compute_release_hash.ps1  generate_manual_test_workbooks.py  prepare_release_candidate_bundle.ps1
(+25 files in other folders)
