[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellcheck"
version = "0.10.0"
description = "CellCheck project for guided assessment of spreadsheet exercises."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "CellCheck Team" },
]
dependencies = [
  "openpyxl>=3.1",
  "pydantic>=2.0",
  "PySide6>=6.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cellcheck = "cellcheck.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
