[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellcheck"
version = "0.11.0"
description = "CellCheck project for guided assessment of spreadsheet exercises."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
  { name = "Stefano Oliva" },
]
maintainers = [
  { name = "Stefano Oliva" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Education",
  "Topic :: Office/Business",
]
dependencies = [
  "openpyxl>=3.1",
  "pydantic>=2.0",
  "PySide6>=6.5",
]

[project.urls]
Homepage = "https://github.com/ProfStefanoOliva/CellCheck"
Repository = "https://github.com/ProfStefanoOliva/CellCheck"
Issues = "https://github.com/ProfStefanoOliva/CellCheck/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cellcheck = "cellcheck.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
